# dx-terminal

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
.claude/: dx-automation-plugin.json  dx-workflow-catalog.json  settings.json
.claude/hooks/: vision-hook.sh
.vision/: history.jsonl  vision.json
.vision/research/: F3.1.md  F6.1.md  F7.1.md  F7.2.md  F8.1.md  F9.1.md  phase2-strategy.md
assets/: dashboard.html
crates/agent-api/: Cargo.toml
crates/agent-api/src/: anthropic.rs  ollama.rs  provider.rs
crates/agent-core/: Cargo.toml
crates/agent-harness/: Cargo.toml
crates/agent-harness/src/: compact.rs  lib.rs  runtime.rs  tests.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: bash.rs  edit.rs  file_read.rs  file_write.rs  glob_search.rs  grep_search.rs  lib.rs  repo_map.rs  tests.rs  web_fetch.rs
crates/swarm/: Cargo.toml
data/: sherlock_sites.json  tech_fingerprints.json
demo/: demo-expect.sh  demo-script.sh  main-plain.txt  record-demo.sh  record.sh  screenshot.html
docs/: DXOS_MASTER_ARCHITECTURE.md  INTERFACE_AND_VISUAL_SYSTEM.md  MCP_RESEARCH.md  OPERATOR_SYSTEM_GUIDE.md  PROJECT_ADOPTION_AND_RECOVERY.md  PROVIDER_AUTOMATION_INTEROP.md  PROVIDER_PLUGIN_INTEROP.md  QA_DASHBOARD_SCHEDULER_CLAIMS_CHECK.md  dashboard-sync-review.md  vdd-2.0-backlog.md  vdd-2.0-design.md  vdd-2.0-phase-0-1-tickets.md
hooks/: pre-push
scripts/: install-hooks.sh
src/: agent_assets.rs  agent_display.rs  agent_models.rs  agent_repl.rs  agent_router.rs  agent_setup.rs  analytics.rs  app.rs  approval.rs  audit.rs  build.rs  capacity.rs  ci.rs  claims.rs  claude.rs  collab.rs  config.rs  dashboard.rs  design_tokens.rs  display.rs  dxos.rs  dxos_runtime.rs  dxos_scheduler.rs  dxos_supervisor.rs  external_mcp.rs  factory.rs  find.rs  go.rs  hash.rs  health_monitor.rs  http.rs  hub_client.rs  ipc.rs  knowledge.rs  lib.rs  machine.rs  main.rs  mcp_registry.rs  multi_agent.rs  osint.rs  (+28 more)
src/agents/: types.rs
src/app/: config.rs  state.rs
src/engine/: health.rs  mod.rs  (+3 more)
tests/: dx_dashboard_smoke.spec.js  tui_integration.rs  unit_tests.rs
(+84 files in other folders)
