[package]
name = "dx-agent-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Shared types, errors, and configuration for DXOS"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
