[package]
name = "dx-agent-harness"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Agent conversation runtime — turn loop, permissions, session compaction"


[dependencies]
dx-agent-core = { path = "../agent-core" }
dx-agent-tools = { path = "../agent-tools" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
