[package]
name = "dx-agent-tools"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Native Rust tool implementations — file ops, grep, glob, shell"


[dependencies]
dx-agent-core = { path = "../agent-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
walkdir = "2"
glob = "0.3"
ignore = "0.4"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

[dev-dependencies]
tempfile = "3"
